# Screen-and-Camera-Recording-app

./: README.md  RecordFlow_AI_Spec.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/windows-capture/src/: encoder.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: devices.rs  files.rs  history.rs  mod.rs  recording.rs  settings.rs
src-tauri/src/recording/: audio_capturer.rs  camera_capturer.rs  compositor.rs  manager.rs  mod.rs  screen_capturer.rs  status.rs  video_encoder.rs  video_encoder_mf.rs
src-tauri/src/state/: app_state.rs  history.rs  mod.rs
src-tauri/src/utils/: config.rs  history.rs  mod.rs  paths.rs
src/components/: AudioSettings.tsx  CameraSettings.tsx  DisplaySelector.tsx  RecordingControls.tsx  RecordingTimer.tsx  SelectDropdown.tsx  VideoSettings.tsx  VolumeSlider.tsx
src/hooks/: useRecording.ts  useSettings.ts  useTimerHistory.ts
src/pages/: RecorderPage.tsx
src/services/: tauri.service.ts
src/types/: index.ts
