[package]
name = "tauri-02"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_02_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
dirs = "5"
windows-capture = "1.5.0"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_MediaFoundation",
  "Win32_Media_Multimedia",
  "Win32_System_Com",
  "Win32_System_WinRT",
] }
cpal = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["time"] }

# Camera support (may require additional native deps; if build fails, we can disable)
# `decoding` is required for `Buffer::decode_image`.
nokhwa = { version = "0.10.10", default-features = false, features = ["input-native", "decoding"] }

[patch.crates-io]
windows-capture = { path = "crates/windows-capture" }

